examples/type_system/failing/209_stage_cascade_collapse.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/209_stage_cascade_collapse.flx
// error[E071]: Unterminated String
//
// String literal is missing closing quote.
//
//   examples/type_system/failing/209_stage_cascade_collapse.flx:26:15
//    |
// 26 |     let msg = "hello
//    |               ^^^^^^
//
// Hint:
//   Add a closing " at the end of the string.
//
// Note:
//   Suppressed 1 cascading parser diagnostic(s) likely caused by an earlier syntax error.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E071

// Parser cascade fixture: one root parse error followed by nearby generic parse noise.

fn main() -> Unit {
    let msg = "hello
    }
    }
}
